<?xml version="1.0"?>
<package format="3">
  <name>rqt_launchtree</name>
  <version>0.1.5</version>
  <description>
    An RQT plugin for hierarchical launchfile configuration introspection.
  </description>

  <maintainer email="schillin@kth.se">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_launchtree</url>
  <url type="repository">https://github.com/pschillinger/rqt_launchtree</url>
  <url type="bugtracker">https://github.com/pschillinger/rqt_launchtree/issues</url>

  <author>Philipp Schillinger</author>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <architecture_independent/>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml" />
  </export>
</package>
